Envoie les emails via un serveur SMTP (#3733)
* Ajoute le serveur d'email de test

* Ajoute nodemailer et un script de test

* Migre vers un envoi d'email via SMTP

* Désinstalle sib-api-v3-sdk

* Intègre l'envoi d'emails et en test l'objet

* Améliore la lisibilité

* Améliore la lisibilité 2

* Améliore la lisibilité 3

* Déclare smtp-tester en devDependencies

* Simplifie l'affichage des infos de tools/create-temp-smtp-server.ts

* Ajoute une interface pour l'envoi d'email

* fix rebase

* chore: prend en compte les retours de PR

* supprime le paramètre secure et ajoute requireTLS

* modifie le schéma de config

* désactive requireTLS par défaut

* fix ci

* rend les paramètres smtp non optionnels dans le schéma

---------

Co-authored-by: cugniere <16650011+Cugniere@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "pinia": "^2.0.16",
-    "sib-api-v3-sdk": "^8.2.1",
     "tmp": "^0.2.1",
     "ts-node": "^10.9.1",
     "validator": "^13.7.0",
@@ -128,6 +128,7 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.5.1",
     "rollup-plugin-visualizer": "^5.8.2",
+    "smtp-tester": "^2.0.1",
     "ts-jest": "^29.1.0",
     "typescript": "^4.8.3",
     "webpack": "^5.78.0",
