--- a/package.json
+++ b/package.json
@@ -162,7 +162,6 @@
       "\\.tsx?$": [
         "ts-jest",
         {
-          "isolatedModules": true,
           "useESM": true
         }
       ],
@@ -179,12 +178,11 @@
       "node_modules"
     ],
     "moduleNameMapper": {
-      "@lib/(.*)": "<rootDir>/lib/$1",
-      "@/(.*)": "<rootDir>/src/$1",
-      "^(?!.*currency\\.js)(.+)\\.js$": "$1",
-      "^((\\.|@|\\/).+)\\.js$": "$1",
-      "@root/(.*)": "<rootDir>/$1",
-      "@backend/(.*)": "<rootDir>/backend/$1"
+      "@root/(.*).js": "<rootDir>/$1.ts",
+      "@backend/(.*).js": "<rootDir>/backend/$1",
+      "@lib/(.*).js": "<rootDir>/lib/$1",
+      "@/(.*).js": "<rootDir>/src/$1",
+      "^(?!.*currency\\.js)(.+)\\.js$": "$1"
     },
     "extensionsToTreatAsEsm": [
       ".ts"
