--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@/*": ["src/*"],
       "@lib/*": ["lib/*"],
       "@data/*": ["data/*"],
-      "@backend": ["backend/*"],
+      "@backend/*": ["backend/*"],
       "@root/*": ["*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
