--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,8 +97,8 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Run schema-validation-config.spec.js
-        run: npm run test -- tests/integration/schema-validation-config.spec.js
+      - name: Run schema-validation-config.spec.ts
+        run: npm run test -- tests/integration/schema-validation-config.spec.ts
   unit_tests:
     name: Unit tests
     needs: [install, check_data_file_consistency]
@@ -194,7 +194,7 @@ jobs:
         shell: bash
         run: |
           source .venv/bin/activate
-          npm run test tests/unit/openfisca/test.spec.js
+          npm run test tests/unit/openfisca/test.spec.ts
   iframe_build_control:
     name: Iframe build control
     needs: [install]
