Refacto etablissements into lieux (#3766)
* Refacto etablissement into lieu

Supprime logs

* Corrige l'affichage du bouton "afficher tous les lieux"

* Fix test unitaire etablissement

* Refacto : suppprime les clefs "etablissement" (déprécié) dans les aides

* Refacto "lieu" en "types de lieux"

Refacto "lieu" en "types de lieux" - part. 2

* Refacto la méthode normalize de lieux.ts

* Refacto clef d'exclusion

* Refacto la construction des types de lieux par critères

* Refacto la méthode getLieux en fetchLieux : ajout types + async await

* Refacto la méthode getBenefitLieuxTypes : ajout types et lisibilité

* Refacto use-lieux: ajout ts + lisibilité méthode loadLieux

* Capture erreur fetch API avec sentry (lieux)

* FetchLieu : remonte le catch d'erreur + fix benefit ref value

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -791,8 +791,8 @@ fields:
     name: forms
     widget: hidden
   field_benefit_institution: &field_benefit_institution
-    label: Référence aux institutions supervisant l'aide
-    name: etablissements
+    label: Référence aux types de lieux à proximité supervisant l'aide
+    name: lieuxTypes
     widget: hidden
   field_benefit_set_to_zero_recently: &field_benefit_set_to_zero_recently
     label: L'aide OpenFisca a été remise à zéro récemment
@@ -937,8 +937,8 @@ collections:
         name: prefix
         widget: hidden
         required: false
-      - label: Etablissements
-        name: etablissements
+      - label: Types de lieux à proximité
+        name: lieuxTypes
         widget: hidden
         required: false
       - label: repository
