--- a/data/institutions/pole_emploi.yml
+++ b/data/institutions/pole_emploi.yml
@@ -1,6 +1,6 @@
 name: Pôle emploi
 imgSrc: img/institutions/logo_pole_emploi.png
-etablissements:
+lieuxTypes:
   - pole_emploi
 type: national
 code_siren: "130005481"
