--- a/data/benefits/openfisca/contrat_engagement_jeune.yml
+++ b/data/benefits/openfisca/contrat_engagement_jeune.yml
@@ -23,5 +23,5 @@ instructions: https://www.service-public.fr/particuliers/vosdroits/F32700
 entity: individus
 openfiscaPeriod: thisMonth
 setToZeroRecently: true
-etablissements:
+lieuxTypes:
   - mission_locale
