--- a/data/benefits/javascript/communaute-de-communes-sud-herault-bourse-communale-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/communaute-de-communes-sud-herault-bourse-communale-au-permis-de-conduire.yml
@@ -2,8 +2,8 @@ label: Bourse communale au permis de conduire
 institution: communaute-de-communes-sud-herault
 description: Afin de répondre aux difficultés de mobilité des jeunes, la
   communauté de communes Sud-Hérault propose une aide au financement du permis
-  de conduire de 150 à 500€. Cette aide, dont le montant varie selon les
-  ressources du jeune et de sa famille, est attribuée en contrepartie d’un
+  de conduire de 150 à 500€. Son montant varie selon les
+  ressources du jeune et de sa famille et elle est attribuée en contrepartie d’un
   engagement citoyen de 35 à 70h dans une association. L’instruction des
   dossiers de candidature se fait auprès d’Info Jeunes Sud-Hérault.
 prefix: la
