--- a/data/benefits/javascript/departement_orne-aide-departementale-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/departement_orne-aide-departementale-au-permis-de-conduire.yml
@@ -2,8 +2,7 @@ label: Aide départementale au Permis de conduire
 institution: departement_orne
 description: Le Département aide les jeunes qui rencontrent des difficultés
   d’insertion et qui ont un projet professionnel (contrat d’apprentissage,
-  emploi, stage…) à financer leur permis de conduire. Pour faire la
-  demande, vous devez être accompagné·e par un·e référent·e. Si vous n’avez pas de référent·e, vous pouvez contacter l’une des structures
+  emploi, stage…) à financer leur permis de conduire. Pour faire la demande, vous devez être accompagné·e par un·e référent·e. Si vous n’avez pas de référent·e, vous pouvez contacter l’une des structures
   listées dans le règlement du Fonds d’Aide aux Jeunes (FAJ).
 prefix: l’
 conditions_generales:
