--- a/data/benefits/javascript/ville-de-roubaix-bourse-communale-au-permis-de-conduire-passpermis.yml
+++ b/data/benefits/javascript/ville-de-roubaix-bourse-communale-au-permis-de-conduire-passpermis.yml
@@ -1,10 +1,9 @@
 label: "Bourse communale au permis de conduire : Pass'Permis"
 institution: ville-de-roubaix
-description: "Les jeunes roubaisiens de 18 à 25 ans aux ressources modestes et
-  qui s'inscrivent dans une démarche d’insertion professionnelle peuvent
+description: "Cette aide permet aux  jeunes roubaisien·es aux ressources modestes et
+  qui s'inscrivent dans une démarche d’insertion professionnelle de
   bénéficier du financement d'une partie de leur permis B, en échange de 35
-  heures de travail bénévole dans un service de la Ville. Deux sessions
-  d'inscription ont lieu chaque année : en mai et en novembre."
+heures de travail bénévole dans un service de la Ville. Deux sessions d'inscription ont lieu chaque année : en mai et en novembre."
 prefix: la
 conditions_generales:
   - type: communes
@@ -18,7 +17,7 @@ conditions_generales:
     value: 25
 profils: []
 conditions:
-  - Etre inscrit à la Mission Locale si vous n’êtes pas étudiant.
+  - Etre inscrit à la Mission Locale si vous n’êtes pas étudiant·e.
   - Avoir déjà effectué la JAPD (Journée d'Appel de Préparation à la Défense).
   - Etre prêt à participer à un atelier d’éloquence, pour préparer l’oral à la
     commission d’attribution de la bourse.
