--- a/data/benefits/javascript/ville-de-roubaix-bourse-communale-au-permis-de-conduire-passpermis.yml
+++ b/data/benefits/javascript/ville-de-roubaix-bourse-communale-au-permis-de-conduire-passpermis.yml
@@ -19,7 +19,7 @@ profils: []
 conditions:
   - Etre inscrit à la Mission Locale si vous n’êtes pas étudiant·e.
   - Avoir déjà effectué la JAPD (Journée d'Appel de Préparation à la Défense).
-  - Etre prêt à participer à un atelier d’éloquence, pour préparer l’oral à la
+  - Etre prêt à participer à un atelier d’éloquence afin de préparer l’oral à la
     commission d’attribution de la bourse.
 interestFlag: _interetPermisDeConduire
 type: float
