--- a/data/benefits/openfisca/brest_metropole_transport.yml
+++ b/data/benefits/openfisca/brest_metropole_transport.yml
@@ -1,5 +1,5 @@
 label: tarification solidaire transports
-institution: brest_metropole
+institution: intercommunalite_brest_metropole
 description: >
   Les familles aux ressources modestes bénéficient de forfaits mensuels à tarif réduit pour les transports : les forfaits Tempo, Tango et Rythmo. Tous les membres du foyer peuvent en bénéficier.
 conditions:
