--- a/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports.yml
+++ b/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports.yml
@@ -10,9 +10,7 @@ conditions_generales:
     operator: ">"
     value: 942
     period: month
-  - type: epcis
-    values:
-      - "243300316"
+  - type: attached_to_institution
 profils:
   - type: situation_handicap
     conditions:
