Fix: aide region nouvelle aquitaine -> restauration des lycéens

--- a/data/benefits/javascript/region-nouvelle-aquitaine-aide-à-la-restauration-des-lycéen·ne·s.yml
+++ b/data/benefits/javascript/region-nouvelle-aquitaine-aide-à-la-restauration-des-lycéen·ne·s.yml
@@ -5,13 +5,9 @@ description: La Région propose un tarif réduit pour la restauration des
   EREA.
 prefix: l’
 conditions_generales:
-  - type: departements
+  - type: regions
     values:
-      - "24"
-      - "33"
-      - "40"
-      - "47"
-      - "64"
+      - "75"
 profils:
   - type: lyceen
     conditions: []
