Met à jour le lien des bourses pour les formations dans le sanitaire et sociale en Nouvelle-Aquitaine

--- a/data/benefits/javascript/region_nouvelle_aquitaine-bourses-pour-les-étudiants-en-formations-sociales-paramédicales-et-de-santé.yml
+++ b/data/benefits/javascript/region_nouvelle_aquitaine-bourses-pour-les-étudiants-en-formations-sociales-paramédicales-et-de-santé.yml
@@ -12,7 +12,7 @@ conditions_generales:
 profils:
   - type: enseignement_superieur
     conditions: []
-link: https://les-aides.nouvelle-aquitaine.fr/amenagement-du-territoire/bourses-detudes-sur-criteres-sociaux-2022-etudiants-en-formations-sociales-paramedicales-et-de-sante?Profil=Apprenti____%C3%89tudiant____Jeune%20actif____Lyc%C3%A9en____Particulier&Jeunesse=Accompagnement%20scolaire____Apprentissage____%C3%89ducation%20et%20formation____Engagement%20et%20citoyennet%C3%A9____Enseignement%20sup%C3%A9rieur____Insertion%20professionnelle____Lyc%C3%A9es____Mobilit%C3%A9%20internationale____Orientation____Sanitaire%20et%20social&Type=Aides
+link: https://les-aides.nouvelle-aquitaine.fr/amenagement-du-territoire/bourses-detudes-sur-criteres-sociaux-etudiants-en-formations-sociales-paramedicales-et-de-sante-0
 teleservice: https://mes-demarches.nouvelle-aquitaine.fr/craPortailFO/
 instructions: ""
 prefix: les
