Corrige les liens de la bourse Animazioni de la Corse

--- a/data/benefits/javascript/departement-corse-bourse-animazioni.yml
+++ b/data/benefits/javascript/departement-corse-bourse-animazioni.yml
@@ -22,8 +22,8 @@ conditions_generales:
     values:
       - "94"
 profils: []
-link: https://www.isula.corsica/jeunesse/Bourse-Animazioni_a269.html
-instructions: https://www.isula.corsica/jeunesse/Bourse-Animazioni_a269.html
+link: https://www.isula.corsica/jeunesse/Bourse-Animazioni-300-pour-passer-ton-BAFA-ou-BNSSA_a269.html
+form: https://www.isula.corsica/jeunesse/attachment/2415565/
 prefix: la
 type: float
 unit: €
