Corrige le lien de l'aide au BAFA de la CAF 06

--- a/data/benefits/javascript/caf-meurthe-et-moselle-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-meurthe-et-moselle-aide-bafa-approfondissement.yml
@@ -23,5 +23,5 @@ interestFlag: _interetBafa
 type: bool
 unit: €
 periodicite: ponctuelle
-link: https://www.caf.fr/allocataires/caf-de-meurthe-et-moselle/offre-de-service/vie-personnelle/les-aides-aux-formations#:~:text=Pour%20les%20stagiaires%20ayant%20entam%C3%A9s,%2DLambert%2054046%20Nancy%20Cedex).
-instructions: https://www.caf.fr/allocataires/caf-de-meurthe-et-moselle/offre-de-service/vie-personnelle/les-aides-aux-formations#:~:text=Pour%20les%20stagiaires%20ayant%20entam%C3%A9s,%2DLambert%2054046%20Nancy%20Cedex).
+link: https://www.caf.fr/allocataires/caf-de-meurthe-et-moselle/offre-de-service/vie-professionnelle/les-aides-aux-formations-bafa-et-bafd
+instructions: https://www.caf.fr/allocataires/caf-de-meurthe-et-moselle/offre-de-service/vie-professionnelle/les-aides-aux-formations-bafa-et-bafd
