--- a/data/benefits/javascript/caf-sarthe-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-sarthe-aide-bafa-generale.yml
@@ -22,6 +22,6 @@ type: float
 unit: €
 periodicite: ponctuelle
 montant: 400
-link: https://caf.fr/allocataires/caf-de-la-sarthe/offre-de-service/vie-personnelle/des-aides-aux-projets-pour-les-jeunes/bafa
-form: https://caf.fr/sites/default/files/medias/721/Allocataires/Documents_Allocataires/BAFA/BAFA%20formation%20g%C3%A9n%C3%A9rale.pdf
-instructions: https://caf.fr/allocataires/caf-de-la-sarthe/offre-de-service/vie-personnelle/des-aides-aux-projets-pour-les-jeunes/bafa
+link: https://caf.fr/allocataires/caf-de-la-sarthe/offre-de-service/vie-personnelle/des-aides-aux-projets-pour-les-jeunes/la-caf-vous-aide-financer-votre-bafa
+form: https://caf.fr/sites/default/files/medias/721/Allocataires/Documents_Allocataires/BAFA/Formulaire%20aide%20locale%20BAFA%20Fgal%202023.pdf
+instructions: https://caf.fr/allocataires/caf-de-la-sarthe/offre-de-service/vie-personnelle/des-aides-aux-projets-pour-les-jeunes/la-caf-vous-aide-financer-votre-bafa
