--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -359,8 +359,10 @@ jobs:
         run: npm run tools:test-definition-periods
   test_benefit_file_changes:
     name: Test benefit file changes
-    needs: [unit_tests]
+    needs: [install]
     runs-on: ubuntu-20.04
+    outputs:
+      status: ${{ steps.has-changes.outputs.status }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -370,7 +372,7 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-cache-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - id: stop-early
+      - id: has-changes
         run: if "${GITHUB_WORKSPACE}/.github/has-benefit-file-changes.sh" ; then echo "{status}={success}" >> $GITHUB_OUTPUT ; fi
   test_benefit_link_improvements:
     name: Test benefit link improvements
