--- a/data/benefits/javascript/caf-jura-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-jura-aide-bafa-generale.yml
@@ -1,7 +1,7 @@
 label: aide au BAFA pour une session de formation générale
 institution: caf_jura
 description: L'aide à la formation du BAFA est une aide locale mise à
-  disposition par la CAF du Jura pour vous aider à financer votre session en
+  disposition par la CAF du Jura pour vous aider à financer en grande partie votre session en
   complément de l'aide nationale apportée par la caf.
 prefix: l’
 conditions_generales:
@@ -19,7 +19,7 @@ conditions:
   - Etre allocataire ou rattaché au dossier allocataire de vos parents.
 interestFlag: _interetBafa
 type: float
-unit: %
+unit: "%"
 periodicite: ponctuelle
 montant: 90
 link: https://www.caf.fr/allocataires/caf-du-jura/offre-de-service/vie-personnelle/l-aide-la-formation-bafabafad
