Corrige les liens de l'aide BAFA de la CAF de la Haute Saone

--- a/data/benefits/javascript/caf-haute-saone-aide-bafa.yml
+++ b/data/benefits/javascript/caf-haute-saone-aide-bafa.yml
@@ -23,7 +23,7 @@ type: float
 unit: €
 periodicite: ponctuelle
 legend: maximum
-montant: 300
-link: https://www.caf.fr/allocataires/caf-de-la-haute-saone/offre-de-service/vie-professionnelle/bafa-bafd-dispositif
-form: https://www.caf.fr/sites/default/files/medias/701/site/BAFA%20BAFD%20-%20dispositif%20r%C3%A9gional/BAFA-BAFD%202017%20REGIONAL.pdf
-instructions: https://www.caf.fr/allocataires/caf-de-la-haute-saone/offre-de-service/vie-professionnelle/bafa-bafd-dispositif
+montant: 400
+link: https://www.caf.fr/allocataires/caf-de-la-haute-saone/offre-de-service/vie-professionnelle/bafa-bafd-dispositif-regional-session-de-base-et-perfectionnement
+form: https://www.caf.fr/sites/default/files/medias/701/site/BAFA%20BAFD%20-%20dispositif%20r%C3%A9gional/BAFA-BAFD%202023%20REGIONAL.docx
+instructions: https://www.caf.fr/allocataires/caf-de-la-haute-saone/offre-de-service/vie-professionnelle/bafa-bafd-dispositif-regional-session-de-base-et-perfectionnement
