Répare des liens d'aides au financement du BAFA (#3810)

--- a/data/benefits/javascript/caf-ardeche-aide-bafa.yml
+++ b/data/benefits/javascript/caf-ardeche-aide-bafa.yml
@@ -6,15 +6,15 @@ description: La CAF de l'Ardèche peut financer une partie de la session
 conditions:
   - Avoir déjà suivi la session de formation générale au BAFA.
   - Avoir déjà effectué le stage pratique d'animation.
-link: https://www.caf.fr/allocataires/caf-de-l-ardeche/offre-de-service/enfance-et-jeunesse/le-bafa
-form: https://www.caf.fr/sites/default/files/caf/078/Documents/demande_daide_bafa.pdf
-instructions: https://www.caf.fr/allocataires/caf-de-l-ardeche/offre-de-service/enfance-et-jeunesse/le-bafa
+link: https://www.caf.fr/allocataires/caf-de-l-ardeche/offre-de-service/vie-personnelle/le-bafa
+form: https://caf.fr/sites/default/files/medias/078/documents/offre-service/demande_daide_bafa.pdf
+instructions: https://www.caf.fr/allocataires/caf-de-l-ardeche/offre-de-service/vie-personnelle/le-bafa
 prefix: l’
 type: float
 unit: €
 periodicite: ponctuelle
 legend: maximum
-montant: 300
+montant: 315
 interestFlag: _interetBafa
 conditions_generales:
   - type: age
