--- a/data/benefits/javascript/caf-haute-marne-aide-bafd.yml
+++ b/data/benefits/javascript/caf-haute-marne-aide-bafd.yml
@@ -15,9 +15,9 @@ conditions_generales:
     values:
       - "52"
 profils: []
-link: https://www.caf.fr/allocataires/caf-de-la-haute-marne/offre-de-service/enfance-et-jeunesse
-form: https://www.caf.fr/sites/default/files/caf/521/IMPRIME%20BAFD.pdf
-instructions: https://www.caf.fr/allocataires/caf-de-la-haute-marne/offre-de-service/enfance-et-jeunesse
+link: https://www.caf.fr/allocataires/caf-de-la-haute-marne/offre-de-service/vie-personnelle/enfance-et-jeunesse/bafa-et-bafd
+form: https://www.caf.fr/sites/default/files/medias/521/enfance%20et%20jeunesse/IMPRIME%20BAFD.pdf
+instructions: https://www.caf.fr/allocataires/caf-de-la-haute-marne/offre-de-service/vie-personnelle/enfance-et-jeunesse/bafa-et-bafd
 prefix: l’
 type: float
 unit: €
