--- a/data/benefits/javascript/caf_eure-aide-au-brevet-daptitude-aux-fonctions-de-directeur-bafd.yml
+++ b/data/benefits/javascript/caf_eure-aide-au-brevet-daptitude-aux-fonctions-de-directeur-bafd.yml
@@ -26,5 +26,6 @@ type: float
 unit: €
 periodicite: ponctuelle
 montant: 250
-link: https://www.caf.fr/allocataires/caf-de-l-eure/offre-de-service/vie-professionnelle/je-suis-assistant-maternel-agree/le-brevet-d-aptitude-aux-fonctions-d-animateur-bafa-et-aux-fonctions-de-directeur-bafd
-instructions: https://www.caf.fr/allocataires/caf-de-l-eure/offre-de-service/vie-professionnelle/je-suis-assistant-maternel-agree/le-brevet-d-aptitude-aux-fonctions-d-animateur-bafa-et-aux-fonctions-de-directeur-bafd
+link: https://caf.fr/partenaires/caf-de-l-eure/partenaires-locaux/la-newsletter-partenaires-de-la-caf-de-l-eure/la-newsletter-de-avril-2022/la-caf-aide-financer-le-bafa-et-le-bafd
+form: https://caf.fr/sites/default/files/medias/271/2022/AS/DEM_BAFA_BAFD.pdf
+instructions: https://caf.fr/partenaires/caf-de-l-eure/partenaires-locaux/la-newsletter-partenaires-de-la-caf-de-l-eure/la-newsletter-de-avril-2022/la-caf-aide-financer-le-bafa-et-le-bafd
