update: met à jour les chemins d'imports

--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
       "\\.tsx?$": [
         "ts-jest",
         {
+          "isolatedModules": true,
           "useESM": true
         }
       ],
@@ -192,6 +193,7 @@
       "**/tests/(integration|unit)/**/*.spec.ts"
     ],
     "testPathIgnorePatterns": [
+      "tests/unit/views/fiscales.spec.ts",
       "tests/unit/components/ressource/types.spec.ts"
     ]
   },
