--- a/data/benefits/openfisca/aspa.yml
+++ b/data/benefits/openfisca/aspa.yml
@@ -10,7 +10,7 @@ link: https://www.service-public.fr/particuliers/vosdroits/F16871
 form: https://www.lassuranceretraite.fr/portail-info/files/live/sites/pub/files/PDF/demande-aspa.pdf
 forms:
   cnav: https://www.lassuranceretraite.fr/portail-info/files/live/sites/pub/files/PDF/demande-aspa.pdf
-  msa: https://www.formulaires.modernisation.gouv.fr/gf/cerfa_14953.do
+  msa: https://www.formulaires.service-public.fr/gf/cerfa_14953.do
   rsi: https://www.rsi.fr/fileadmin/mediatheque/.Espace_telechargement/Formulaires/Formulaire_allocation_solidarite_personnes_agees.pdf
 floorAt: 10
 prefix: l’
