--- a/data/benefits/openfisca/illkirch_graffenstaden_coupon_arts_et_sports.yml
+++ b/data/benefits/openfisca/illkirch_graffenstaden_coupon_arts_et_sports.yml
@@ -1,11 +1,10 @@
 label: coupon Arts et Sports
 institution: ville_illkirch_graffenstaden
-description: Cette aide permet aux bénéficiaires du RSA qui reprennent une
-  activité de faire face très rapidement aux premières dépenses et aux besoins
-  de trésorerie. Son montant varie entre 300 et 700 euros en fonction de la
-  reprise d'activité (CCD, CDI, etc.).
-link: http://www.illkirch.eu/solidarite-et-sante/ccas/coupon-arts-sports/
-instructions: http://www.illkirch.eu/solidarite-et-sante/ccas/coupon-arts-sports/
+description: Le Coupon Arts et Sports favorise l’accès à une pratique sportive et/ou artistique
+pour les enfants mineurs illkirchois grâce à un allègement des frais d’inscription.
+La famille reçoit un ou plusieurs coupons en fonction de son quotient familial.
+link: http://www.illkirch.eu/solidarite-et-sante/ccas/
+instructions: http://www.illkirch.eu/wp-content/uploads/coupon-arts-et-sports-2021.pdf
 prefix: le
 floorAt: 1
 entity: familles
