correction des deux liens sur l'aide aux stagiaires de la formation professionnelle sanitaire de région PACA

--- a/data/benefits/javascript/region-provence-alpes-cote-azur-remuneration-stagiaires-formation-professionnelle.yml
+++ b/data/benefits/javascript/region-provence-alpes-cote-azur-remuneration-stagiaires-formation-professionnelle.yml
@@ -18,6 +18,6 @@ interestFlag: _interetAidesSanitaireSocial
 type: bool
 unit: €
 periodicite: autre
-link: https://www.maregionsud.fr/aides-et-appels-a-projets/detail/remuneration-des-stagiaires-de-la-formation-professionnelle
+link: https://entreprises.maregionsud.fr/aides-et-appels-a-projet/detail/remuneration-des-stagiaires-de-la-formation-professionnelle
 teleservice: https://aidesformation.maregionsud.fr/SignIn?ReturnUrl=%2Fprofile%2F
-instructions: https://www.maregionsud.fr/aides-et-appels-a-projets/detail/remuneration-des-stagiaires-de-la-formation-professionnelle
+instructions: https://entreprises.maregionsud.fr/aides-et-appels-a-projet/detail/remuneration-des-stagiaires-de-la-formation-professionnelle
