Ajoute le champ conditions_benevoles dans les détails d'une aide
Refacto droits-details

Ajoute conditions_benevoles au schéma (contrib)

Ajoute la visibilité du widget condiitons_bénévole (outil de contrib)

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -760,6 +760,12 @@ fields:
       - *field_statut_occupation_logement
       - *field_not_operator
       - *field_difficultes_acces_ou_frais_logement
+  field_conditions_benevoles: &field_conditions_benevoles
+    label: Conditions bénévoles à satisfaire
+    name: conditions_benevoles
+    hint: Un lien dynamique vers la plateforme JeVeuxAider s'ajoutera à la suite de ces conditions pour orienter l'utilisateur vers des organismes de bénévolat à proximité
+    required: false
+    widget: string
   # champs propre aux aides openfisca
   field_benefit_position: &field_benefit_position
     label: Pondération de l'aide sur la page de résultat
@@ -823,6 +829,7 @@ collections:
       - *field_description
       - *field_definite_article
       - *field_general_conditions
+      - *field_conditions_benevoles
       - *field_eligibility_profile
       - *field_unmodeled_conditions
       - *field_specific_interest
