Corrige des liens cassés - part 1 (#3816)
* correction de 2 liens dans aide bafa caf haute marne

* correction de 2 liens sur l'aide BAFA de la Caf du lot et garonne

* correction de 3 liens sur l'aide BAFD de la Caf de la Haute Marne

* correction de 2 liens sur l'aide BAFA de la caf de l'Eure et ajout d'un lien vers le formulaire de demande cerfa

* ajout du lien vers le formulaire de demande et correction des 2 liens link et instrution que j'avais mal copiés la première fois

* reformulation du titre et du texte pour davantage de clarté, et correction d'un lien cassé sur le formulaire de demande

* correction du lien vers le form

* correction du lien cassé du formulaire de la msa

* Suppression de l'aide régionale au mérite pour les lycéens. Elle n'existe plus.

* correction du lien vers le descriptif de l'aide et amélioration du texte pour rendre clair le fait que l'aid est versée automatiquement aux étudiants boursiers. Il n'y a donc pas de démarches à effectuer.

* correction des deux liens cassés et suppression du tag intérêt pour le bafa car l'aide n'a aucun lien avec le Bafa

* suppression des trois formulaires supplémentaires. Ne reste plus que le formulaire principal, celui de la cnav

* chore: formatting

---------

Co-authored-by: cugniere <16650011+Cugniere@users.noreply.github.com>

--- a/data/benefits/javascript/caf-haute-marne-aide-parcours-jeunes.yml
+++ b/data/benefits/javascript/caf-haute-marne-aide-parcours-jeunes.yml
@@ -23,12 +23,11 @@ conditions_generales:
     operator: <=
     value: 25
 profils: []
-link: https://www.caf.fr/sites/default/files/caf/521/Flyer%20Parcours%20Jeunes%202021.pdf#pdfjs.action=download
-instructions: https://www.caf.fr/sites/default/files/caf/521/Flyer%20Parcours%20Jeunes%202021.pdf#pdfjs.action=download
+link: https://www.caf.fr/allocataires/caf-de-la-haute-marne/actualites-departementales/aide-au-parcours-des-jeunes
+instructions: https://www.caf.fr/sites/default/files/medias/521/actualit%C3%A9s/Parcours%20Jeunes.pdf
 prefix: l’
 type: float
 unit: €
 periodicite: autre
 legend: maximum
 montant: 500
-interestFlag: _interetBafa
